2009-11-16  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Darin Adler.

        Rename protocolIsValid to isValidProtocol.
        https://bugs.webkit.org/show_bug.cgi?id=31503

        This name change was suggested in https://bugs.webkit.org/show_bug.cgi?id=29972#c19.

        No new tests since no new functionality was introduced.

        * html/HTMLAnchorElement.cpp:
        (WebCore::HTMLAnchorElement::setProtocol):
        * platform/KURL.cpp:
        (WebCore::isValidProtocol):
        * platform/KURL.h:
        * platform/KURLGoogle.cpp:
        (WebCore::isValidProtocol):

2009-11-16  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        AX: aria-labelledby duplicates some of its WAI-ARIA label
        https://bugs.webkit.org/show_bug.cgi?id=31565

        Test: accessibility/aria-labelledby-overrides-label.html

        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::hasTextAlternative):
        (WebCore::AccessibilityRenderObject::exposesTitleUIElement):
        (WebCore::AccessibilityRenderObject::accessibilityIsIgnored):
        * accessibility/AccessibilityRenderObject.h:

2009-11-16  Nate Chapin  <japhet@chromium.org>

        Reviewed by Darin Fisher.

        Handle the case of a null NPObject* in NPN_SetException in
        the V8 bindings.  This allow out of process plugins calling
        NPN_SetException to just send null instead of sending an
        NPObject* that would be an address in a different 
        process's memory space.

        https://bugs.webkit.org/show_bug.cgi?id=31561

        * bindings/v8/NPV8Object.cpp:
        (_NPN_SetException): Allow null NPObject* and just throw a general error.

2009-11-16  Alexey Proskuryakov  <ap@apple.com>

        Windows build fix.

        * platform/network/cf/SocketStreamHandleCFNet.cpp: (WebCore::SocketStreamHandle::createStreams):