@@ -40,11 +40,11 @@
 #include <SystemConfiguration/SystemConfiguration.h>
 #endif
 
-#if PLATFORM(MAC) // WebKitSystemInterface doesn't include these symbols.
-extern const CFStringRef kCFStreamPropertyCONNECTProxy;
-extern const CFStringRef kCFStreamPropertyCONNECTProxyHost;
-extern const CFStringRef kCFStreamPropertyCONNECTProxyPort;
-#endif
+extern "C" {
+CFN_EXPORT const CFStringRef kCFStreamPropertyCONNECTProxy;
+CFN_EXPORT const CFStringRef kCFStreamPropertyCONNECTProxyHost;
+CFN_EXPORT const CFStringRef kCFStreamPropertyCONNECTProxyPort;
+}
 
 namespace WebCore {
 
@@ -213,13 +213,10 @@ void SocketStreamHandle::createStreams()
         break;
         }
     case CONNECTProxy: {
-#if PLATFORM(MAC)
-        // FIXME: Make CONNECT proxies work on Windows.
         const void* proxyKeys[] = { kCFStreamPropertyCONNECTProxyHost, kCFStreamPropertyCONNECTProxyPort };
         const void* proxyValues[] = { m_proxyHost.get(), m_proxyPort.get() };
         RetainPtr<CFDictionaryRef> connectDictionary(AdoptCF, CFDictionaryCreate(0, proxyKeys, proxyValues, sizeof(proxyKeys) / sizeof(*proxyKeys), &kCFTypeDictionaryKeyCallBacks, &kCFTypeDictionaryValueCallBacks));
         CFReadStreamSetProperty(m_readStream.get(), kCFStreamPropertyCONNECTProxy, connectDictionary.get());
-#endif
         break;
         }
     }
